# MitsubaRealisticCamera

./: .gitignore  MANIFEST.in  README.md  RealisticCamera.py  glass_dictionary.py  plan.md  pyproject.toml  render_scene.py  utils.py
examples/: render_scene.py
examples/scenes/kitchen/: scene_realistic.xml  scene_realistic_fisheye.xml
examples/scenes/kitchen/lenses/: JP2022-033487_Example01P.zmx
mitsuba_realistic_camera/: __init__.py  glass_dictionary.py  realistic_camera.py  utils.py
mitsuba_realistic_camera.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_realistic_camera.py
