[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mitsuba-realistic-camera"
version = "0.1.0"
description = "PBRT-style realistic camera sensor plugin for Mitsuba 3."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Mitsuba Realistic Camera contributors" }
]
dependencies = [
  "drjit",
  "mitsuba"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics :: 3D Rendering",
  "Topic :: Scientific/Engineering :: Physics"
]

[project.optional-dependencies]
examples = ["numpy", "pillow"]

[tool.setuptools.packages.find]
include = ["mitsuba_realistic_camera*"]
